# locus-visualization-2

./: .gitignore  Cargo.toml
basic-web-static/: 1.index.js  index.html  index.js
src/: lib.rs  lists.rs
